# IngeHack-2k22-Challenges

./: CHALS.md  README.md  leetify.py
.github/scripts/: only_one_chall.sh  yml_validation.sh
.github/workflows/: pull_requset_validator.yml
.scripts/: commit.sh  launch.sh  unique-flag.sh
.scripts/auto-all/: challenge.py  conf.py  script.py
.scripts/ctfd/: all-challs.sh  cmd-all.sh  hide-all.sh  show-all.sh  state.sh  syncpush.sh
.scripts/deploy-chal/: all.sh  config.py  gen-deploy.sh  generate.sh  script.py
.scripts/gcp-firewall/: allow.sh  block-all.sh  block-ctfd.sh  block-docker-challenges-all.sh  block-http.sh  create-all.sh  create-deny-all.sh  deny.sh  unblock-all.sh  unblock-ctfd.sh  unblock-docker-challenges-all.sh  unblock-http.sh
.scripts/k8s/: all-down.sh  all-restart.sh  all-up.sh  reapply.sh
challenge-example/: README.md  challenge.yml
config/: chals.json  ctfcli_chals.json  ports.yml  yatodo.json
config/haproxy/: haproxy.cfg  http-hosts.map  sni.map
config/k8s/: network-policy.yml  role-binding.yml  role.yml
crypto/Awesome-Encryption-Service/: Dockerfile  challenge.yml
crypto/encoding/: challenge.yml
crypto/ez-ecc/: Dockerfile  challenge.yml  docker-compose.yml
crypto/flag-checker/: challenge.yml
crypto/ti-al-as/: challenge.yml
forensics/IP_Theft/: README.md  challenge.yml
forensics/Malware/: README.md  challenge.yml
forensics/Phishing/: README.md  challenge.yml
helm-charts/: ctf-challenge-chart-0.1.0.tgz
reverse/rustomware/solution/rustomware/: Cargo.toml
reverse/rustomware/solution/rustomware/src/: main.rs
(+140 files in other folders)
